Physics: corner clipping through Dino-Blocks is fixed. Menus: pause menu and button designs finalized~

--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ canvas {
     background-color: rgba(0, 0, 0, 0);
 }
 .cover.one {
-    transition: backdrop-filter 0.4s ease-in-out;
-    transition-delay: 0.4s;
+    transition: backdrop-filter 0.2s ease-in-out;
+    transition-delay: 0.2s;
 }
 .cover.two {
-    transition: backdrop-filter 0.8s ease-in-out;
+    transition: backdrop-filter 0.4s ease-in-out;
 }
 .cover.one.on {
     -webkit-backdrop-filter: grayscale(100%);
@@ -52,8 +52,21 @@ canvas {
 @keyframes textFly {
     from {
         top: calc(var(--unit) * -4);
+    } to {
+        top: 100%;
     }
-    to {
+}
+@keyframes menuFly {
+    from {
+        top: -100%;
+    } to {
+        top: calc((100% - var(--unit) * (var(--height) - 0.6)) / 2);
+    }
+}
+@keyframes menuFlyOut {
+    from {
+        top: calc((100% - var(--unit) * (var(--height) - 0.6)) / 2);
+    } to {
         top: 100%;
     }
 }
@@ -71,7 +84,7 @@ canvas {
     font-size: calc(var(--unit) / 2);
     -webkit-text-stroke-width: 0;
 }
-#nextLevel {
+#NextLevel {
     -webkit-text-fill-color: white; /* Will override color (regardless of order) */
     -webkit-text-stroke-width: calc(var(--unit) / 15);
     -webkit-text-stroke-color: black;
@@ -79,7 +92,7 @@ canvas {
 
 .bigText.on {
     display: block;
-    animation: textFly 1.4s cubic-bezier(.19, 1.15, .96, -0.03) 0.8s; 
+    animation: textFly 1.2s cubic-bezier(.2, 1, .8, 0) 0.4s; 
 }
 
 #Pause {
@@ -106,26 +119,20 @@ canvas {
     height: calc(var(--unit) * 11 / 10);
     top: calc((100% - var(--unit) * (var(--height) - 0.4)) / 2);
 }
-#Pause:hover .gray {
-    background-color: rgba(30, 30, 30, 0.35);
-}
 
 .menu {/* All the menu pages. */
     position: absolute;
-    top: calc((100% - var(--unit) * (var(--height) - 0.6)) / 2);
+    top: -100%;
     left: calc((100% - var(--unit) * (var(--width) - 0.6)) / 2);
     width: calc(var(--unit) * (var(--width) - 0.6));
     height: calc(var(--unit) * (var(--height) - 0.6));
-    background-image: url("images/Menu.png");
-    background-size: calc(var(--unit) * (var(--width) - 0.6)) calc(var(--unit) * (var(--height) - 0.6));
 }
-.menu .content {
-    position: absolute;
-    top: calc(var(--unit) / 10);
-    left: calc(var(--unit) / 10);
-    width: calc(var(--unit) * (var(--width) - 0.8));
-    height: calc(var(--unit) * (var(--height) - 0.8));
-    background-color: rgba(30, 30, 30, 0.4);
+.menu.on {
+    animation: menuFly 0.4s cubic-bezier(.4,1,.6,1) 0s 1 both;
+}
+.menu.off {
+    animation: menuFlyOut 0.3s cubic-bezier(.31,.68,.46,.83) 0s 1 none;
+    top: 100%;
 }
 
 .title {
@@ -137,26 +144,43 @@ canvas {
     position: absolute;
     right: calc(var(--unit) * 3 / 10);
     top: calc(var(--unit) * 3 / 10);
-    width: calc(var(--unit) * 3 / 5);
-    height: calc(var(--unit) * 3 / 5);
-    background-color: rgba(255, 255, 255, 0.15);
-    line-height: calc(var(--unit) * 3 / 5);
+    width: calc(var(--unit) * 4 / 5);
+    height: calc(var(--unit) * 4 / 5);
+    line-height: calc(var(--unit) * 4 / 5);
     text-align: center;
-    font-size: calc(var(--unit) * 2 / 5);
+    font-size: calc(var(--unit) * 3.5 / 5);
 }
 .back:hover {
-    background-color: rgba(255, 255, 255, 0.4);
+    width: calc(var(--unit) * 1);
     cursor: pointer;
 }
 .button {
-    background-color: rgba(30, 30, 30, 0.35);
-    border: 5px solid black;
-    float: left;
-    width: calc(var(--unit) * 2);
-    height: calc(var(--unit) * 2);
+    font-size: calc(var(--unit) / 2);
+    line-height: calc(var(--unit) * 0.7);
+    margin: auto;
+    margin-top: calc(var(--unit));
+    width: calc(var(--unit) * 5);
+    height: calc(var(--unit) * 0.7);
+}
+.button:hover {
+    height: calc(var(--unit) * 0.8);
+    margin-top: calc(var(--unit) * 0.9);
+}
+.button.levels {
+    margin-top: calc(var(--unit) * 2.5);
+}
+.button.levels:hover {
+    margin-top: calc(var(--unit) * 2.4);
+}
+.button span {
+    /*visibility: hidden;*/
+    font-size: calc(var(--unit) / 3);
+    line-height: calc(var(--unit) / 3);
+    letter-spacing: calc(var(--unit) / -10);
 }
 .link {
     float: left;
     margin: auto;
     color: blue;
+    visibility: hidden;
 }
